<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:fitsSystemWindows="true">

    <!-- Spacer pentru bara de status -->
    <View
        android:id="@+id/statusBarSpacer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"/>

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header_layout_pacienti"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F2DDFB"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/statusBarSpacer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/pacientiTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pacienti"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"
            android:gravity="center" />
    </RelativeLayout>

    <!-- Lista pacienți -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/header_layout_pacienti"
        app:layout_constraintBottom_toTopOf="@+id/addPatientButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Mesaj dacă lista e goală -->
    <TextView
        android:id="@+id/textEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nu_exist_pacien_i_n_acest_moment"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/recyclerView"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Buton adăugare pacient -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPatientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_input_add"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
